--- a/CinemaBookingClient/appsettings.Development.json
+++ b/CinemaBookingClient/appsettings.Development.json
@@ -1,10 +1,10 @@
 ﻿{
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
-    // "DefaultConnection": "Server=(local);Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
+      "DefaultConnection": "Server=(local);Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
+   // "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
 
-    "WebServiceConnection": "https://dc1-viis-win12.multiplex.ua/WSVistaWebClient/RESTData.svc/cinemas/1001/sessions/12874/seat-plan"
+    "WebServiceConnection": "https://dc1-viis-win12.multiplex.ua/WSVistaWebClient/RESTData.svc/cinemas/1001/sessions/12875/seat-plan"
   },
   "Logging": {
     "IncludeScopes": false,
