--- a/CinemaBookingClient/CinemaBookingClient.csproj
+++ b/CinemaBookingClient/CinemaBookingClient.csproj
@@ -27,4 +27,10 @@
     <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="HardCode\cinemaPlan.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
