--- a/CinemaBookingClient/appsettings.Development.json
+++ b/CinemaBookingClient/appsettings.Development.json
@@ -3,8 +3,8 @@
   "testSchemeFile" : "HardCode/cinemaPlan.json",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=(local);Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
-    // "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"DefaultConnection": "Server=(local);Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CinemaBooking;Trusted_Connection=True;MultipleActiveResultSets=true",
 
     "WebServiceConnection": "https://dc1-viis-win12.multiplex.ua/WSVistaWebClient/RESTData.svc/cinemas/1001/sessions/12875/seat-plan"
   },
